Revert "Fix search and filter overflow text not being hidden by transparency search input"
This reverts commit 8bc563b02a9f7981a98414d5f041013b40c3399d.

--- a/scss/_patterns_search-and-filter.scss
+++ b/scss/_patterns_search-and-filter.scss
@@ -123,8 +123,6 @@
     }
 
     .p-search-and-filter__input {
-      // Background color of the search and filter input must be opaque to cover the chip overflow amount
-      background-color: $colors--theme--background-inputs--opaque;
       border: 0;
       box-shadow: none;
       flex-grow: 1;
