--- a/scss/_settings_colors.scss
+++ b/scss/_settings_colors.scss
@@ -121,7 +121,6 @@ $colors--light-theme--background-default: #fff !default;
 $colors--light-theme--background-alt: #f7f7f7 !default;
 $colors--light-theme--background-code: $color-code-background !default;
 $colors--light-theme--background-inputs: adjust-color($color-x-dark, $lightness: 100% * (1 - $input-background-opacity-amount)) !default;
-$colors--light-theme--background-inputs--opaque: $colors--light-theme--background-inputs; // light theme inputs background is already opaque
 $colors--light-theme--background-active: adjust-color($color-x-dark, $lightness: 100% * (1 - $active-background-opacity-amount)) !default;
 $colors--light-theme--background-hover: adjust-color($color-x-dark, $lightness: 100% * (1 - $hover-background-opacity-amount)) !default;
 $colors--light-theme--background-overlay: transparentize($color-dark, 0.15) !default;
@@ -182,7 +181,6 @@ $colors--dark-theme--background-default: #262626 !default;
 $colors--dark-theme--background-alt: #202020 !default;
 $colors--dark-theme--background-code: $color-code-background-dark !default;
 $colors--dark-theme--background-inputs: rgba($colors--dark-theme--text-default, $input-background-opacity-amount) !default;
-$colors--dark-theme--background-inputs--opaque: #2f2f2f !default;
 $colors--dark-theme--background-active: rgba($colors--dark-theme--text-default, $active-background-opacity-amount) !default;
 $colors--dark-theme--background-hover: rgba($colors--dark-theme--text-default, $hover-background-opacity-amount) !default;
 $colors--dark-theme--background-overlay: transparentize($color-dark, 0.15) !default;
@@ -231,7 +229,6 @@ $colors-dark-theme--tinted-borders: (
 
 // Paper theme (work in progress)
 $colors--paper-theme--background-inputs: rgba($color-x-dark, $input-background-opacity-amount) !default;
-$colors--paper-theme--background-inputs--opaque: #e9e9e9 !default;
 $colors--paper-theme--background-active: rgba($color-x-dark, $active-background-opacity-amount) !default;
 $colors--paper-theme--background-hover: rgba($color-x-dark, $hover-background-opacity-amount) !default;
 
@@ -251,7 +248,6 @@ $colors--theme--background-default: var(--vf-color-background-default);
 $colors--theme--background-alt: var(--vf-color-background-alt);
 $colors--theme--background-code: var(--vf-color-background-code);
 $colors--theme--background-inputs: var(--vf-color-background-inputs);
-$colors--theme--background-inputs--opaque: var(--vf-color-background-inputs-opaque);
 $colors--theme--background-active: var(--vf-color-background-active);
 $colors--theme--background-hover: var(--vf-color-background-hover);
 $colors--theme--background-overlay: var(--vf-color-background-overlay);
@@ -309,7 +305,6 @@ $colors--theme--accent: var(--vf-color-accent);
   --vf-color-background-alt: #{$colors--light-theme--background-alt};
   --vf-color-background-code: #{$colors--light-theme--background-code};
   --vf-color-background-inputs: #{$colors--light-theme--background-inputs};
-  --vf-color-background-inputs-opaque: #{$colors--light-theme--background-inputs--opaque};
   --vf-color-background-active: #{$colors--light-theme--background-active};
   --vf-color-background-hover: #{$colors--light-theme--background-hover};
   --vf-color-background-overlay: #{$colors--light-theme--background-overlay};
@@ -367,7 +362,6 @@ $colors--theme--accent: var(--vf-color-accent);
   --vf-color-background-alt: #{$colors--dark-theme--background-alt};
   --vf-color-background-code: #{$colors--dark-theme--background-code};
   --vf-color-background-inputs: #{$colors--dark-theme--background-inputs};
-  --vf-color-background-inputs-opaque: #{$colors--dark-theme--background-inputs--opaque};
   --vf-color-background-active: #{$colors--dark-theme--background-active};
   --vf-color-background-hover: #{$colors--dark-theme--background-hover};
   --vf-color-background-overlay: #{$colors--dark-theme--background-overlay};
@@ -420,7 +414,6 @@ $colors--theme--accent: var(--vf-color-accent);
   --vf-color-background-alt: #{#ebebeb};
 
   --vf-color-background-inputs: #{$colors--paper-theme--background-inputs};
-  --vf-color-background-inputs-opaque: #{$colors--paper-theme--background-inputs--opaque};
   --vf-color-background-active: #{$colors--paper-theme--background-active};
   --vf-color-background-hover: #{$colors--paper-theme--background-hover};
 }
